# Parsing-Test-Task

./: Dockerfile  Makefile  README.md  data_storage.py  example.env  main.py  pyproject.toml
config/: logging.py  settings.py
core/: data_processors.py  enums.py  protocols.py  remotes.py  utils.py
