[tool.poetry]
name = "parsing-test-task-gorbunov"
version = "0.1.0"
description = ""
authors = ["VIM9BOT <un.9bot@gmail.com>"]
readme = "README.md"
packages = [{include = "parsing_test_task_gorbunov"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.3.4"
pydantic = "^2.8.2"
httpx = "^0.27.0"
loguru = "^0.7.2"
termcolor = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
